--- a/.config/i3/config
+++ b/.config/i3/config
@@ -292,7 +292,7 @@ for_window [class="^.*"] border pixel 1
 
 # Autostart applications
 exec --no-startup-id redshift-gtk -t 6500:4600
-#exec --no-startup-id polybar bottom
+exec --no-startup-id polybar bottom
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id conky
 exec --no-startup-id compton --config ~/.config/i3/compton.conf -b
