--- a/.config/i3/compton.conf
+++ b/.config/i3/compton.conf
@@ -85,8 +85,10 @@ opacity-rule = [
 "99:class_g = 'Viewnior'", 
 "99:class_g = 'VirtualBox'", 
 "99:name *?= 'VLC'", 
-"99:name *?= 'Write'", 
-"93:class_g = 'URxvt' && !_NET_WM_STATE@:32a", 
+"99:name *?= 'Write'",
+"100:name *?='Wine'",
+
+"100:name *?='Wine'","93:class_g = 'URxvt' && !_NET_WM_STATE@:32a", 
 "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'", 
 "96:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'" 
 ];
