--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -10,8 +10,8 @@ bordercolor = #333
 accent = #e60053
 
 [bar/top]
-#monitor = eDP-1
-#monitor = HDMI1
+monitor=${env:POLYBARMON}
+
 width = 100%
 height = 30
 
@@ -44,7 +44,7 @@ tray-offset-y = 0
 tray-scale = 1.0
 
 [bar/bottom]
-#monitor = eDP-1
+monitor=${env:POLYBARMON}
 bottom = true
 width = 100%
 height = 27
