--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,7 +55,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -show run -lines 3 -eh 2 -width 100 -padding 450 -opacity "85" -bw 0  -font "System San Francisco Display 18"
+bindsym $mod+d exec rofi -show run -show run -lines 3 -eh 2 -width 100 -padding 600 -opacity "85" -bw 0  -font "System San Francisco Display 18"
 bindsym $mod+Shift+d exec rofi -show window -lines 10 -eh 2 -opacity "85" -bw 0
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
@@ -300,7 +300,6 @@ for_window [class="Hexchat"] move container to workspace $workspace9
 for_window [class="Seafile Client"] move container to workspace $workspace10
 
 # Start-up applications
-exec --no-startup-id redshift-gtk -t 6500:4600
 exec --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec --no-startup-id conky
 exec --no-startup-id compton --config ~/.config/i3/compton.conf -b
@@ -308,12 +307,13 @@ exec --no-startup-id keepass
 exec --no-startup-id xfce4-terminal
 exec --no-startup-id termite
 exec --no-startup-id nm-applet
+exec --no-startup-id redshift-fix
+#exec_always --no-startup-id redshift-gtk -t 6500:4600
 
 # Start-up / reload applications
-exec_always --no-startup-id $HOME/.bin/scripts/monitor-setup.sh
+#exec_always --no-startup-id $HOME/.bin/scripts/monitor-setup.sh
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-#exec_always --no-startup-id compton --config ~/.config/i3/compton.conf -b
-exec_always --no-startup-id setxkbmap de
+#exec_always --no-startup-id setxkbmap de
 exec_always --no-startup-id fehbg
 exec_always --no-startup-id xmodmap ~/.Xmodmap
 
