--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -340,7 +340,7 @@ label-connected =    %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 #speaker-mixer = Speaker
 #headphone-mixer = Headphone
 #headphone-id = 9
