--- a/.config/i3/compton.conf
+++ b/.config/i3/compton.conf
@@ -57,6 +57,7 @@ invert-color-include = [ ];
 glx-copy-from-front = false;
 glx-swap-method = "undefined";
 
+# find out with $~ xprop WM_CLASS  
 opacity-rule = [
 "90:name *?='rofi'",
 "99:name *?= 'Call'", 
@@ -64,10 +65,10 @@ opacity-rule = [
 "99:class_g = 'Darktable'", 
 "50:class_g = 'Dmenu'", 
 "99:name *?= 'Event'", 
-"99:class_g = 'Firefox'", 
+"100:class_g = 'firefox'", 
 "99:class_g= 'Gpicview'",
-"99:class_g = 'qutebrowser'",
-"99:class_g = 'Google-chrome'",
+"100:class_g = 'qutebrowser'",
+"99:class_g = 'Chromium'",
 "99:class_g = 'GIMP'", 
 "99:name *?= 'Image'",
 "99:class_g = 'Lazpaint'", 
@@ -83,8 +84,8 @@ opacity-rule = [
 "99:name *?= 'sudo'", 
 "99:name *?= 'Screenshot'", 
 "99:class_g = 'Viewnior'", 
-"99:class_g = 'VirtualBox'", 
-"99:name *?= 'VLC'", 
+"100:class_g = 'VirtualBox'", 
+"100:name *?= 'VLC'", 
 "99:name *?= 'Write'",
 "100:name *?='Wine'",
 
